new jdbc approach with limited resources