@@ -31,14 +31,17 @@ CURRENT_CLASSPATH="${PROBER_APP_DIR}:${JDBC_DRIVER_JAR_PATH}"
 
 exec java -cp "${CURRENT_CLASSPATH}" \
           --add-opens=java.base/java.nio=ALL-UNNAMED \
+          -server \
           -Xmx512m \
           -Xms256m \
           -XX:+UseG1GC \
           -XX:MaxGCPauseMillis=100 \
-          -XX:+PrintGCDetails \
-          -XX:+PrintGCTimeStamps \
+          -XX:+HeapDumpOnOutOfMemoryError \
+          -XX:HeapDumpPath=/tmp \
+          -XX:+ExitOnOutOfMemoryError \
           -Djava.awt.headless=true \
           -Duser.timezone=UTC \
+          -Dfile.encoding=UTF-8 \
           com.snowflake.client.jdbc.prober.Prober \
           "${PROBER_ARGS[@]}"
 
